--- a/index.html
+++ b/index.html
@@ -8,16 +8,23 @@
 <body>
 <h1> UHLANGA BOOKS</h1>
 <br>
-<P>ZIMKITHA ZILO</P>
-
 <a href="HOME.HTML">HOME</a>       
 <a href="About.html">About</a>
 <a href="book.html">Gallery</a>
 <a href="contact.html">contact</a>
 
+<h1><p>ZIMKITHA ZILO</p></h1>
+<br>
+
 <img src="Front page pic.jpg"
           width="700px"
           height="600px">
+
+          <section id="Home"><h1>Home</h1></section>
+          <section id="about"><h1>About</h1></section>
+          <section id="Books"><h1>Books</h1></section>
+          <section id="contact"><h1>Contact</h1></section>
+          <div>         
           
 </body>
   </html>
